@@ -956,5 +956,9 @@ Wed Oct  4 14:36:51 CEST 2000
 
 	- Added patch by Christof Petig <christof.petig@wtal.de> to fix
 	  missing NOTICE.
+
+Wed Oct 11 16:49:36 CEST 2000
+
+	- Synced preproc.y with gram.y.
 	- Set ecpg version to 2.8.0. 
 	- Set library version to 3.2.0.
